fix: fixed session

--- a/Frontends/Web/Views/Home/Detail.cshtml
+++ b/Frontends/Web/Views/Home/Detail.cshtml
@@ -11,7 +11,7 @@
             <img src="@Model.StockPictureUrl" class="card-img-top" />
             <div class="card-body">
                 <h5 class="card-title">@Model.Name</h5>
-                <div class="badge bg-primary">Kategori : @Model.Category.Name</div>
+                <div class="badge bg-primary">Konser : @Model.Concert.Artist</div>
                 <p class="card-text"> @Model.Description</p>
             </div>
         </div>
