--- a/Frontends/Web/Views/Tickets/Create.cshtml
+++ b/Frontends/Web/Views/Tickets/Create.cshtml
@@ -13,12 +13,12 @@
                     <div asp-validation-summary="ModelOnly"></div>
 
                     <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label" asp-for="CategoryId"></label>
-                        <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.categoryList">
+                        <label for="exampleFormControlInput1" class="form-label" asp-for="ConcertId"></label>
+                        <select asp-for="ConcertId" class="form-control" asp-items="@ViewBag.concertList">
                             <option value="">kategori seçiniz</option>
                         </select>
 
-                        <span class="text-danger" asp-validation-for="CategoryId"></span>
+                        <span class="text-danger" asp-validation-for="ConcertId"></span>
                     </div>
 
                     <div class="mb-3">
@@ -52,7 +52,7 @@
                         <input type="file" asp-for="PhotoFormFile" class="form-control" />
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Kurs Kaydet</button>
+                    <button type="submit" class="btn btn-primary">Bileti Kaydet</button>
                 </form>
             </div>
         </div>
