--- a/Frontends/Web/Views/Tickets/Index.cshtml
+++ b/Frontends/Web/Views/Tickets/Index.cshtml
@@ -20,7 +20,7 @@
                                 <th>Bilet isim</th>
                                 <th>Fiyat</th>
                                 <th>Süre</th>
-                                <th>Kategori</th>
+                                <th>Konsert</th>
                                 <th>İşlemler</th>
                             </tr>
                         </thead>
@@ -32,7 +32,7 @@
                                     <td>@item.Name</td>
                                     <td>@item.Price</td>
                                     <td>@item.Feature.Duration</td>
-                                    <td>@item.Category.Name</td>
+                                    <td>@item.Concert.Artist</td>
                                     <td>
                                         <a asp-controller="Tickets" asp-action="Update" asp-route-id="@item.Id" class="btn btn-success btn-sm">Güncelle</a>
 
