--- a/Frontends/Web/Views/Tickets/Update.cshtml
+++ b/Frontends/Web/Views/Tickets/Update.cshtml
@@ -7,7 +7,7 @@
 
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Kurs güncelleme </h5>
+                <h5 class="card-title">Bilet güncelleme </h5>
 
                 <form asp-controller="Tickets" asp-action="Update" method="post" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly"></div>
@@ -15,11 +15,11 @@
                     <input type="hidden" asp-for="UserId" />
                     <input type="hidden" asp-for="Picture" />
                     <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label" asp-for="CategoryId"></label>
-                        <select asp-for="CategoryId" class="form-control" asp-items="@ViewBag.categoryList">
+                        <label for="exampleFormControlInput1" class="form-label" asp-for="ConcertId"></label>
+                        <select asp-for="ConcertId" class="form-control" asp-items="@ViewBag.concertList">
                         </select>
 
-                        <span class="text-danger" asp-validation-for="CategoryId"></span>
+                        <span class="text-danger" asp-validation-for="ConcertId"></span>
                     </div>
 
                     <div class="mb-3">
@@ -53,7 +53,7 @@
                         <input type="file" asp-for="PhotoFormFile" class="form-control" />
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Kurs Güncelle</button>
+                    <button type="submit" class="btn btn-primary">Bileti Güncelle</button>
                 </form>
             </div>
         </div>
